--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="src/assets/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="src/assets/favicon.svg" />
-    <link rel="shortcut icon" href="src/assets/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="src/assets/apple-touch-icon.png" />
-    <link rel="manifest" href="src/assets/site.webmanifest" />
+    <link rel="icon" type="image/png" href="src/assets/logo/" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="src/assets/logo/favicon.svg" />
+    <link rel="shortcut icon" href="src/assets/logo/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="src/assets/logo/apple-touch-icon.png" />
+    <link rel="manifest" href="src/assets/logo/site.webmanifest" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
   </head>
